<resources>
    <string name="app_name">recipe-app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_omer">Omer</string>
    <string name="create_an_account">Don\'t have an account? Register here</string>
    <string name="have_an_account">Have an account? Login here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="pick_image">Pick Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="preparation_instructions">Preparation Instructions</string>
    <string name="preparation_time_in_minutes">Preparation Time (in minutes)</string>
    <string name="unit">Unit</string>
    <string name="qty">Qty</string>
    <string name="name">Name</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="submit_post">Submit Post</string>
</resources>